--- a/index.html
+++ b/index.html
@@ -2687,7 +2687,7 @@ window.FlexDashboardComponents.push({
 
 <div id="intro" class="section level1 sidebar">
 <h1>Intro</h1>
-<p>This dashboard covers the materials for the first folow-up course in R programming. Course held in Banja Luka, December 9-13, 2019. See ?? for the course website of the introductory course.</p>
+<p>This dashboard covers the materials for the first folow-up course in R programming. Course held in Banja Luka, December 10-13, 2019. The course website of the introductory course can be found <a href="http://peterstoltze.dk/RfOS/">here</a>.</p>
 <hr />
 <p>Instructors:</p>
 <ul>
@@ -2871,14 +2871,18 @@ window.FlexDashboardComponents.push({
 <h3>Wednesday’s materials</h3>
 <p>We adapt the course as we go. To ensure that you work with the latest iteration of the course materials, we advice all course participants to access the materials online.</p>
 <ul>
-<li>Part C: <code>R</code> Linear Models
+<li><p>Part C: <code>R</code> Linear Models</p>
 <ul>
-<li><a href="Contents/Material/Part%20C%20-%20Statistical%20inference/Lecture_C.html" target="_blank">Lecture C</a></li>
-<li><a href="Contents/Material/Part%20C%20-%20Statistical%20inference/Lecture_C_handout.html" target="_blank">Lecture C Handout</a></li>
-<li><a href="Contents/Material/Part%20C%20-%20Statistical%20inference/Practical_C_walkthrough.html" target="_blank">Practical C</a></li>
-<li><a href="Contents/Material/Part%20C%20-%20Statistical%20inference/Practical_C.html" target="_blank">Impractical C</a></li>
+<li><a href="Contents/Material/Part%20C%20-%20Linear%20models/Lecture_C.html" target="_blank">Lecture C</a></li>
+<li><a href="Contents/Material/Part%20C%20-%20Linear%20models/Lecture_C_handout.html" target="_blank">Lecture C Handout</a></li>
+<li><a href="Contents/Material/Part%20C%20-%20Linear%20models/Practical_C_walkthrough.html" target="_blank">Practical C</a></li>
+<li><a href="Contents/Material/Part%20C%20-%20Linear%20models/Practical_C.html" target="_blank">Impractical C</a></li>
+<li><a href="Contents/Material/Part%20C%20-%20Linear%20models/Lecture_M_handout.html" target="_blank">Extra Lecture M Handout</a></li>
+<li><a href="Contents/Material/Part%20C%20-%20Linear%20models/Practical_M_walkthrough.html" target="_blank">Extra Practical M</a></li>
+<li><a href="Contents/Material/Part%20C%20-%20Linear%20models/Practical_M.html" target="_blank">Extra Impractical M</a></li>
+<li><a href="Contents/Material/Part%20C%20-%20Linear%20models/nurses.sav" target="_blank">Nurse dataset</a></li>
 </ul></li>
-<li>Part D: Generalized Linear Models</li>
+<li><p>Part D: Generalized Linear Models</p></li>
 </ul>
 <p>All lectures are in <code>html</code> format. Practicals are are provided both as naked questions but also with ample explanations and solutions - choose according to your taste!</p>
 </div>
@@ -2899,7 +2903,13 @@ window.FlexDashboardComponents.push({
 <p>We adapt the course as we go. To ensure that you work with the latest iteration of the course materials, we advice all course participants to access the materials online.</p>
 <ul>
 <li><p>Part E: Data Validation and Editing</p></li>
-<li><p>Part F: Imputation</p></li>
+<li><p>Part F: Imputation</p>
+<ul>
+<li><a href="Contents/Material/Part%20F%20-%20Imputation/Lecture_F.html" target="_blank">Lecture F</a></li>
+<li><a href="Contents/Material/Part%20F%20-%20Imputation/Lecture_F_handout.html" target="_blank">Lecture F Handout</a></li>
+<li><a href="Contents/Material/Part%20F%20-%20Imputation/Practical_F_walkthrough.html" target="_blank">Practical F</a></li>
+<li><a href="Contents/Material/Part%20F%20-%20Imputation/Practical_F.html" target="_blank">Impractical F</a></li>
+</ul></li>
 </ul>
 <p>All lectures are in <code>html</code> format. Practicals are walkthrough files that guide you through the exercises. <code>Impractical</code> files contain the exercises, without walkthrough, explanations and solutions.</p>
 </div>
@@ -2935,9 +2945,6 @@ window.FlexDashboardComponents.push({
 <li><a href="https://happygitwithr.com/index.html">Happy Git and GitHub for the useR</a>: a great introduction to version control using Git and GitHub together with RStudio. Written by Jenny Bryan in a very concise style. Highly recommended!</li>
 </ul>
 <!-- ## Column 2 -->
-<!-- ### For fun -->
-<!-- <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">My wife asked me what machine learning is and I said: remember when we ordered the hot plate for the boat and amazon suggested buying all the equipment needed to make a full meth lab?</p>&mdash; (((Kane Baccigalupi))) (@rubyghetto) <a href="https://twitter.com/rubyghetto/status/1058220004301127680?ref_src=twsrc%5Etfw">November 2, 2018</a></blockquote> -->
-<!-- <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
 </div>
 </div>
 </div>
