--- a/index.html
+++ b/index.html
@@ -2872,6 +2872,7 @@ window.FlexDashboardComponents.push({
 <ul>
 <li><a href="https://www.r-project.org/">The R project homepage</a></li>
 <li><a href="https://cran.r-project.org/web/views/OfficialStatistics.html">CRAN task view for official statistics</a></li>
+<li><a href="https://cran.r-project.org/other-docs.html">CRAN area for contributed documentation</a> No longer actively maintained, but a lot of good resources</li>
 <li>Some places to find the <code>R</code> community:
 <ul>
 <li><a href="https://twitter.com/search?q=%23rstats">#rstats hashtag</a></li>
@@ -2917,6 +2918,9 @@ window.FlexDashboardComponents.push({
 <h2>Column 2</h2>
 <div id="useful-references-1" class="section level3">
 <h3>Useful references</h3>
+<ul>
+<li><a href="https://cran.r-project.org/doc/contrib/Faraway-PRA.pdf">Practical Regression and Anova using R</a> by Julian Faraway</li>
+</ul>
 </div>
 </div>
 </div>
