--- a/Contents/Material/Part E - Data validation/Practical-E.html
+++ b/Contents/Material/Part E - Data validation/Practical-E.html
@@ -372,8 +372,106 @@ summary {
 <div id="a-bit-on-factors" class="section level3">
 <h3>1 - a bit on factors</h3>
 <p><strong>Define the vector</strong></p>
-<pre class="r"><code>v &lt;- factor(c(1,8,3,11))</code></pre>
+<pre class="r"><code>v &lt;- factor(c(1,8.2,3,11))</code></pre>
 <p><strong>What happens if you apply the function <code>as.numeric</code> to <code>v</code>? How can you make <code>v</code> into a numeric vector?</strong></p>
+<pre class="r"><code>as.numeric(v)</code></pre>
+<pre><code>## [1] 1 3 2 4</code></pre>
+<p>Since <code>v</code> is a factor, the visible values in it are actually labels for the underlying factor values - which are nicely ordered consequtive integers. In order to make <code>v</code> numeric with the <em>right</em> values, use</p>
+<pre class="r"><code>as.numeric(as.character(v))</code></pre>
+<pre><code>## [1]  1.0  8.2  3.0 11.0</code></pre>
+</div>
+<div id="reading-in-data-with-base-r-and-readr" class="section level3">
+<h3>2 - reading in data with base R and <code>readr</code></h3>
+<p><strong>The file <code>unnamed.csv</code> contains comma-separated values of ages and heights for a set of imaginary persons. Read in the data. Make sure to name both variables, and make both numeric. The obvious candidate function is <code>read.table</code>, but the <code>read_csv</code> function in the <code>readr</code> package makes it a lot easier</strong></p>
+<p>Let’s try with <code>read.table</code></p>
+<pre class="r"><code>## reading with read.table ----
+dat &lt;- read.table(
+  file = &quot;data/unnamed.csv&quot;
+  , header = FALSE
+  , col.names = c(&quot;age&quot;,&quot;height&quot;)
+  , stringsAsFactors=FALSE
+  , sep=&quot;,&quot;)
+dat</code></pre>
+<pre><code>##   age height
+## 1  21    6.0
+## 2  42    5.9
+## 3  18   5.7*
+## 4  21   &lt;NA&gt;</code></pre>
+<p>The file reads in nicely, and we get useful variable names, but the data in the <code>height</code> variable isn’t clean and cannot be read as numeric. We can try to coerce the variable into numeric, but this fails:</p>
+<pre class="r"><code>## define colClasses ----
+dat &lt;- read.table(
+  file = &quot;data/unnamed.csv&quot;
+  , header = FALSE
+  , col.names = c(&quot;age&quot;,&quot;height&quot;)
+  , colClasses = c(&quot;numeric&quot;,&quot;numeric&quot;)
+  , stringsAsFactors=FALSE
+  , sep=&quot;,&quot;)</code></pre>
+<pre><code>## Error in scan(file = file, what = what, sep = sep, quote = quote, dec = dec, : scan() expected &#39;a real&#39;, got &#39;5.7*&#39;</code></pre>
+<p>Instead, we can read as character, clean up the text and convert to numeric. Or we could go the tidyverse way or use the <code>readcsv</code> function in the <code>readr</code> package.</p>
+<pre class="r"><code># parse columns as &#39;number&#39; (flexible)
+readr::read_csv(&quot;data/unnamed.csv&quot;
+      , col_names=c(&quot;age&quot;,&quot;height&quot;)
+      , col_types=&quot;nn&quot;)</code></pre>
+<pre><code>## # A tibble: 4 x 2
+##     age height
+##   &lt;dbl&gt;  &lt;dbl&gt;
+## 1    21    6  
+## 2    42    5.9
+## 3    18    5.7
+## 4    21   NA</code></pre>
+</div>
+<div id="matching-dirty-data-against-standard-labels" class="section level3">
+<h3>3 - matching dirty data against standard labels</h3>
+<p><strong>The file <code>bands.txt</code> has a list of bands, but somebody messed up the “country” variable. Match it against the vector <code>c(&quot;Australia&quot;, &quot;United States&quot;, &quot;United Kingdom&quot;, &quot;Germany&quot;, &quot;Spain&quot;)</code>. Also make sure the <code>date</code> variable is a date.</strong></p>
+<p>We read in the data nicely with the <code>readr</code> package:</p>
+<pre class="r"><code>library(readr)
+bands &lt;- read_delim(&quot;data/bands.txt&quot;, delim = &quot;\t&quot;, trim_ws = T,
+                     col_types = cols( date = col_date(format = &quot;%d%b%Y&quot;)) )</code></pre>
+<p>Now for the label matching</p>
+<pre class="r"><code>countries &lt;- trimws(bands$country)
+codes &lt;- c(&quot;Australia&quot;, &quot;United States&quot;, &quot;United Kingdom&quot;, &quot;Germany&quot;, &quot;Spain&quot;)
+
+## base R match function gives the clean matches
+match(countries, codes)</code></pre>
+<pre><code>##  [1]  2  5 NA  1 NA  4  2  2  2 NA  3  3  3  2 NA  2  2 NA</code></pre>
+<pre class="r"><code>## Which values are failing? 
+countries[is.na(match(countries, codes))]</code></pre>
+<pre><code>## [1] &quot;UK&quot;             &quot;US&quot;             &quot;United Kingsom&quot; &quot;United Kigdom&quot; 
+## [5] &quot;Untied States&quot;</code></pre>
+<pre class="r"><code>## The amatch function allows for some slack
+library(stringdist)
+amatch(countries, codes, maxDist=3)</code></pre>
+<pre><code>##  [1]  2  5 NA  1 NA  4  2  2  2  3  3  3  3  2  3  2  2  2</code></pre>
+<pre class="r"><code>## Which values are still failing?
+countries[is.na(amatch(countries, codes, maxDist=3))]</code></pre>
+<pre><code>## [1] &quot;UK&quot; &quot;US&quot;</code></pre>
+<pre class="r"><code>## We match the closest fit
+D &lt;- stringdistmatrix(countries, codes)
+i &lt;- apply(D, 1, which.min)
+data.frame(rawtext = countries, coded = codes[i])</code></pre>
+<pre><code>##           rawtext          coded
+## 1   United States  United States
+## 2           Spain          Spain
+## 3              UK          Spain
+## 4       Australia      Australia
+## 5              US          Spain
+## 6         Germany        Germany
+## 7   United States  United States
+## 8   United States  United States
+## 9   United States  United States
+## 10 United Kingsom United Kingdom
+## 11 United Kingdom United Kingdom
+## 12 United Kingdom United Kingdom
+## 13 United Kingdom United Kingdom
+## 14  United States  United States
+## 15  United Kigdom United Kingdom
+## 16  United States  United States
+## 17  United States  United States
+## 18  Untied States  United States</code></pre>
+<pre class="r"><code>## This may be the time when we hand-code the rest:
+bands$country_clean &lt;- codes[amatch(countries, codes, maxDist=3)]
+bands$country_clean[ bands$country == &quot;UK&quot;] &lt;- &quot;United Kingdom&quot;
+bands$country_clean[ bands$country == &quot;US&quot;] &lt;- &quot;United States&quot;</code></pre>
 </div>
 
 
