Minor tweaks to text, added link to practical E data

--- a/Contents/Material/Part A - Repetition/Practical_A_walkthrough.html
+++ b/Contents/Material/Part A - Repetition/Practical_A_walkthrough.html
@@ -383,6 +383,11 @@ summary {
 <ol start="3" style="list-style-type: decimal">
 <li><strong>Now look at the table <code>HairEyeColor</code>. Look at the help file and print the data. Why does it print weird? How do you make a data frame containing only data on female students? Can you compute the number of brown-haired students? Which hair/eye/sex color combination has the fewest students?</strong></li>
 </ol>
+<hr />
+<ol start="4" style="list-style-type: decimal">
+<li><strong>Make a vector containing the numbers 0 to 0.8 by 0.1. Make a vector repeating the numbers 1,2,3 three times. Make a vector containing the letters A to I. Make a data frame out of these three vectors. Name the columns of the data frame - say, “fractions”, “numbers” and “letters”. Add a column containing the log of the sum of “numbers” and “fractions”. Make a histogram of the logs.</strong></li>
+</ol>
+<hr />
 <ol start="5" style="list-style-type: decimal">
 <li><strong>Save a copy of your data frame to the disk. Where is it saved? Where is your working directory? If it isn’t where you want it, move it - say, to a new folder designated for this course</strong></li>
 </ol>
