--- a/Contents/Material/Part E - Data validation/Lecture_E.html
+++ b/Contents/Material/Part E - Data validation/Lecture_E.html
@@ -3179,8 +3179,8 @@ library(rex)</pre>
 
 <ul>
 <li>Well-defined format (data structure)</li>
-<li>Well-defined types (numbers, date/time,string, categorical\(...\) )</li>
-<li>Statistical units can be identified (persons, transactions, phone calls\(...\))</li>
+<li>Well-defined types (numbers, dates, string, categorical, … )</li>
+<li>Statistical units can be identified (persons, transactions, phone calls, …)</li>
 <li>Variables can be identified as properties of statistical units.</li>
 </ul>
 
@@ -3340,6 +3340,7 @@ rex(one_or_more(digit)
 </ul>
 
 <pre class = 'prettyprint lang-r'>gender &lt;- c(&quot;Male&quot;, &quot;male&quot;, &quot;Female&quot;, &quot;fem.&quot;, &quot;F&quot;, &quot;M&quot;)
+
 stringdist(gender, &quot;Male&quot;)</pre>
 
 <pre >## [1] 0 1 3 4 4 3</pre>
