--- a/index.html
+++ b/index.html
@@ -2939,6 +2939,7 @@ window.FlexDashboardComponents.push({
 <ul>
 <li><a href="Contents/Material/Part%20E%20-%20Data%20validation/Lecture_E.html" target="_blank">Lecture E</a></li>
 <li><a href="Contents/Material/Part%20E%20-%20Data%20validation/Practical_E.html" target="_blank">Practical E</a></li>
+<li>Data for the practical: <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/bands.txt" target="_blank">bands.txt</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/unnamed.csv" target="_blank">unnamed.csv</a></li>
 </ul></li>
 <li><p>Part F: Imputation</p>
 <ul>
