--- a/Contents/Material/Part C - Linear models/Practical_C.html
+++ b/Contents/Material/Part C - Linear models/Practical_C.html
@@ -436,7 +436,7 @@ library(DAAG)</code></pre>
 <li><strong>Inspect the diagnostic plots for the model obtained in <code>exercise 12</code>. What issues can you detect?</strong></li>
 </ol>
 <hr />
-<p>End of <code>Practical H</code>.</p>
+<p>End of <code>Practical</code>.</p>
 </div>
 
 
