--- a/Contents/Material/Part C - Linear models/Lecture_C.html
+++ b/Contents/Material/Part C - Linear models/Lecture_C.html
@@ -3172,9 +3172,50 @@ library(ggplot2)</pre>
 
 <p>This will open a help page on the <code>lm()</code> function.</p>
 
+</article></slide><slide class=""><hgroup><h2>Benefits data</h2></hgroup><article  class="smaller" id="benefits-data">
+
+<p>Unemployment of blue collar workers:</p>
+
+<p>Column <code>stateur</code>:</p>
+
+<ul>
+<li>state unemployment rate (in %)</li>
+</ul>
+
+<p>Column <code>tenure</code>:</p>
+
+<ul>
+<li>years of tenure in jobs lost</li>
+</ul>
+
+<p>Column <code>age</code>:</p>
+
+<ul>
+<li>age in years</li>
+</ul>
+
+<p>Column <code>joblost</code>:</p>
+
+<ul>
+<li>reason for loss of job (position abolished, seasonal job, not performing well enough, other)</li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>Linear regression</h2></hgroup><article  id="linear-regression">
+
+<p>Linear regression model \[
+y_i=\alpha+\beta{x}_i+\varepsilon_i
+\]</p>
+
+<p>Assumptions:</p>
+
+<ul>
+<li>\(y_i\) conditionally normal with mean \(\mu_i=\alpha+\beta{x}_i\)</li>
+<li>\(\varepsilon_i\) are \(i.i.d.\) with mean 0 and (constant) variance \(\sigma^2\)</li>
+</ul>
+
 </article></slide><slide class=""><hgroup><h2>Continuous predictors</h2></hgroup><article  class="smaller" id="continuous-predictors">
 
-<p>To obtain a linear model with a main effect for <code>tenure</code>, we formulate \(stateur\sim tenure\)</p>
+<p>To obtain a linear regression model with a main effect for <code>tenure</code>, we formulate \(stateur\sim tenure\)</p>
 
 <pre class = 'prettyprint lang-r'>fit &lt;- Benefits %$%
   lm(stateur~tenure)
