update lectures C and F

--- a/Contents/Material/Part C - Linear models/Lecture_C.html
+++ b/Contents/Material/Part C - Linear models/Lecture_C.html
@@ -3642,7 +3642,9 @@ lm(pred ~ new.x1$x1)$coefficients</pre>
 <li><code>lme4::lmer</code>: linear mixed effect models</li>
 <li><code>lme4::glmer</code>: generalized linear mixed effect models</li>
 <li><code>lme4::nlmer</code>: non-linear mixed effect models</li>
-</ul></article></slide>
+</ul>
+
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Practical</h2></hgroup><article  id="practical"></article></slide>
 
 
   <slide class="backdrop"></slide>
