--- a/Contents/Material/Part D - GLMs/Practical_D.html
+++ b/Contents/Material/Part D - GLMs/Practical_D.html
@@ -383,12 +383,6 @@ yes    0   0  3  4  0  6  7  0  0   1   7</code></pre>
 <ol style="list-style-type: decimal">
 <li><strong>Create this data in <code>R</code></strong></li>
 </ol>
-<!-- ```{r} -->
-<!-- data <- data.frame(conc = c(.1, .5, 1, 10, 20, 30, 50, 70, 80, 100, 150), -->
-<!--                    no = c(7, 1, 10, 9, 2, 9, 13, 1, 1, 4, 3), -->
-<!--                    yes = c(0, 0, 3, 4, 0, 6, 7, 0, 0, 1 ,7))  -->
-<!-- data -->
-<!-- ``` -->
 <hr />
 <ol start="2" style="list-style-type: decimal">
 <li><strong>Add two new variables (columns) to the data</strong></li>
@@ -397,105 +391,44 @@ yes    0   0  3  4  0  6  7  0  0   1   7</code></pre>
 <li>the margin of <code>no</code> and <code>yes</code> over the rows (i.e. <code>no</code> + <code>yes</code>)</li>
 <li>the proportion (<code>yes</code> over <code>margin</code>)</li>
 </ul>
-<!-- ```{r} -->
-<!-- data <-  -->
-<!--   data %>%  -->
-<!--   mutate(margin = no+yes, -->
-<!--          prop = yes / margin) -->
-<!-- ``` -->
+<hr />
 <ol start="3" style="list-style-type: decimal">
 <li><strong>Fit the logistic model with <code>margin</code> as the weights</strong></li>
 </ol>
-<!-- ```{r} -->
-<!-- fit <-  -->
-<!--   data %$% -->
-<!--   glm(prop ~ conc, family=binomial, weights=margin) -->
-<!-- ``` -->
 <hr />
 <ol start="4" style="list-style-type: decimal">
 <li><strong>Look at the summary of the fitted object</strong></li>
 </ol>
-<!-- ```{r} -->
-<!-- summary(fit) -->
-<!-- ``` -->
 <hr />
 <ol start="5" style="list-style-type: decimal">
 <li><strong>Inspect the plots number 1 and 5 for <code>fit</code></strong></li>
 </ol>
-<!-- ```{r} -->
-<!-- plot(fit, which = c(1, 5)) -->
-<!-- ``` -->
-<!-- The data set is small, but case `11` stands out in the `Residuals vs. Leverage` plot -->
 <hr />
 <ol start="6" style="list-style-type: decimal">
 <li><strong><code>conc</code> is somewhat skewed. Run the model again with a log-transformation for <code>conc</code>.</strong></li>
 </ol>
-<!-- ```{r echo = FALSE} -->
-<!-- data$conc %>% -->
-<!--   density() %>% -->
-<!--   plot() -->
-<!-- ``` -->
-<!-- To apply this in the model directly: -->
-<!-- ```{r} -->
-<!-- fit.log <-  -->
-<!--   data %$% -->
-<!--   glm(prop ~ I(log(conc)), family=binomial, weights=margin) -->
-<!-- ``` -->
 <hr />
 <ol start="7" style="list-style-type: decimal">
 <li><strong>Look at the summary of the fitted object again</strong></li>
 </ol>
-<!-- ```{r} -->
-<!-- summary(fit.log) -->
-<!-- ``` -->
-<!-- The logodds now depict the unit increase in `log(conc)`, instead of `conc`. -->
 <hr />
 <ol start="8" style="list-style-type: decimal">
 <li><strong>Inspects the plots number 1 and 5 of the fitted object based on <code>log(conc)</code>.</strong></li>
 </ol>
-<!-- ```{r} -->
-<!-- plot(fit.log, which = c(1, 5)) -->
-<!-- ``` -->
-<!-- Outliers are now less of an issue.  -->
 <hr />
 <ol start="9" style="list-style-type: decimal">
-<li><strong>Use the <code>brandsma</code> data from package <code>mice</code> to fit a logistic regression model for <code>sex</code> based on <code>lpo</code> (Language Post Outcome).</strong></li>
+<li>The <code>moths</code> data frame in the <code>DAAG</code> package contains data from a study of the effect of habitat on the densities of two species of moth (A and P). The quasipoisson distribution is a reasonable model for these data. Try modeling the variable <code>A</code> using this distribution. Is there a better link function than the standard?</li>
 </ol>
-<!-- ```{r} -->
-<!-- brandsma.subset <-  -->
-<!--   brandsma %>% -->
-<!--   subset(!is.na(sex) & !is.na(lpo), select = c(sex, lpo)) -->
-<!-- fit <-  -->
-<!--   brandsma.subset %$% -->
-<!--   glm(sex ~ lpo, family=binomial(link='logit')) -->
-<!-- fit %>% -->
-<!--   summary() -->
-<!-- ``` -->
-<!-- With every unit increase in `lpo`, the logodds of gender increases by `coef(fit)[2]`.  -->
 <hr />
 <ol start="10" style="list-style-type: decimal">
-<li><strong>Obtain confidence intervals for the parameter estimates.</strong></li>
+<li>Let’s try to specify our own link function: <span class="math inline">\(f(x) = \log(\exp(x)-1)\)</span>. Generate data like this:</li>
 </ol>
-<!-- ```{r} -->
-<!-- confint(fit) -->
-<!-- ``` -->
+<pre class="r"><code>n &lt;- 1000                       
+x &lt;- runif(n)
+sh &lt;- 2                        
+y &lt;- rgamma(n,scale=log(2+3*x)/sh,shape=sh)</code></pre>
+<p>Specify the link function and run a <code>glm</code> regressing <code>y</code> on <code>x</code>. <strong>Hint:</strong> Look at the help file for <code>family</code>. You need to make an object of type “link-glm”, containing the items needed for <code>glm</code> to run: a link function, an inverse link, the derivative of the inverse link, and a function that describes the domain of the inverse link.</p>
 <hr />
-<ol start="11" style="list-style-type: decimal">
-<li><strong>Use the model parameters to predict the <code>sex</code> variable and compare your predictions to the observed <code>sex</code>. </strong> <!-- We can obtain predictions by using function `predict`. The default predictions are on the scale of the linear predictors; the alternative "response" is on the scale of the response variable. Thus for a default binomial model the default predictions are of log-odds (probabilities on logit scale) and type = "response" gives the predicted probabilities.  --> <!-- To obtain the predicted logodds: --> <!-- ```{r} --> <!-- pred.logodds <-  --> <!--   fit %>% --> <!--   predict() --> <!-- head(pred.logodds) --> <!-- ``` --> <!-- and the predicted probabilities --> <!-- ```{r} --> <!-- pred.prob <-  --> <!--   fit %>% --> <!--   predict(type = "response") --> <!-- head(pred.prob) --> <!-- ``` --> <!-- We can then use the decision boundary `pred.prob > .5` to assign cases to `sex == 1` and the others to `sex == 0`.  --> <!-- ```{r} --> <!-- pred <- numeric(length(pred.prob)) --> <!-- pred[pred.prob > .5] <- 1 --> <!-- pred <- unlist(pred) --> <!-- ``` --> <!-- To determine how many correct predictions we have, we can use --> <!-- ```{r} --> <!-- obs <-  --> <!--   brandsma %>% --> <!--   subset(!is.na(sex) & !is.na(lpo), select = sex) --> <!-- sum(pred == obs) #total correct --> <!-- mean(pred == obs) #average correct --> <!-- ``` --> <!-- So we succesfully predict about half. Not that impressive. An alternative way to test our model efficiency is with `CVbinary()`: --> <!-- ```{r} --> <!-- CVbinary(glm(sex ~ lpo, family=binomial(link='logit'), data = brandsma.subset)) --> <!-- ``` --></li>
-</ol>
-<hr />
-<ol start="12" style="list-style-type: decimal">
-<li><strong>The <code>moths</code> data frame in the <code>DAAG</code> package contains data from a study of the effect of habitat on the densities of two species of moth (A and P). The quasipoisson distribution is a reasonable model for these data. Try modeling the variable <code>A</code> using this distribution. Is there a better link function than the standard?</strong></li>
-</ol>
-<!-- ```{r} -->
-<!-- A.glm <- glm(formula = A ~ log(meters) + factor(habitat), family = -->
-<!-- quasipoisson, data = moths) -->
-<!-- summary(A.glm) -->
-<!-- # Note the huge standard errors -->
-<!-- ## Consider the square root link as another possibility -->
-<!-- A2.glm <- glm(formula = A ~ sqrt(meters) + factor(habitat), family = quasipoisson(link=sqrt), data = moths) -->
-<!-- summary(A2.glm) -->
-<!-- ``` -->
 <p>End of Practical</p>
 
 
