Part E exercises added + added to homepage

--- a/index.html
+++ b/index.html
@@ -2883,6 +2883,7 @@ window.FlexDashboardComponents.push({
 <li><a href="https://www.r-bloggers.com/">R-bloggers</a></li>
 <li><a href="https://stackoverflow.com/">Stack Overflow</a> A good place to ask questions. Check if your question has been answered before, and make sure to phrase it carefully and correctly.</li>
 </ul></li>
+<li><a href="https://r4ds.had.co.nz/pipes.html">Pipes in R</a></li>
 </ul>
 </div>
 </div>
@@ -2938,8 +2939,9 @@ window.FlexDashboardComponents.push({
 <li><p>Part E: Data Validation and Editing</p>
 <ul>
 <li><a href="Contents/Material/Part%20E%20-%20Data%20validation/Lecture_E.html" target="_blank">Lecture E</a></li>
-<li><a href="Contents/Material/Part%20E%20-%20Data%20validation/Practical_E.html" target="_blank">Practical E</a></li>
-<li>Data for the practical: <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/bands.txt" target="_blank">bands.txt</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/unnamed.csv" target="_blank">unnamed.csv</a></li>
+<li><a href="Contents/Material/Part%20E%20-%20Data%20validaPractical_E_walkthrough.html" target="_blank">Practical E</a></li>
+<li><a href="Contents/Material/Part%20E%20-%20Data%20validation/Practical_E.html" target="_blank">Impractical E</a></li>
+<li>Data for the practical: <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/bands.txt" target="_blank">bands.txt</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/unnamed.csv" target="_blank">unnamed.csv</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/people.txt">people.txt</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/peoplerules.txt">peoplerules.txt</a>, <a href="Contents/Material/Part%20E%20-%20Data%20validation/data/dirty_iris.txt">dirty_iris.txt</a></li>
 </ul></li>
 <li><p>Part F: Imputation</p>
 <ul>
