--- a/index.html
+++ b/index.html
@@ -2913,6 +2913,7 @@ window.FlexDashboardComponents.push({
 <li><a href="Contents/Material/Part%20D%20-%20GLMs/Lecture_D_handout.html" target="_blank">Lecture D Handout</a></li>
 <li><a href="Contents/Material/Part%20D%20-%20GLMs/Practical_D_walkthrough.html" target="_blank">Practical D</a></li>
 <li><a href="Contents/Material/Part%20D%20-%20GLMs/Practical_D.html" target="_blank">Impractical D</a></li>
+<li>Data: <a href="Contents/Material/Part%20D%20-%20GLMs/danish_cabinet.xls">cabinet</a>, <a href="Contents/Material/Part%20D%20-%20GLMs/Benefits.xlsx">benefits</a></li>
 </ul></li>
 </ul>
 <p>All lectures are in <code>html</code> format. Practicals are are provided both as naked questions but also with ample explanations and solutions - choose according to your taste!</p>
