--- a/Contents/Material/Part D - GLMs/Data_exploration.html
+++ b/Contents/Material/Part D - GLMs/Data_exploration.html
@@ -370,11 +370,11 @@ summary {
 
 
 <ol style="list-style-type: decimal">
-<li>Download the Benefits.xlxs file from the course webpage and try to load this data into R using the function <code>read_excel</code> function from the <code>readxl</code> package (rember to specify the correct path/set your working directory accordingly)</li>
+<li>Download the benefits data from the course webpage. Note that this data is in .xlsx format. Try to load this data into R using the function <code>read_excel</code> function from the <code>readxl</code> package (rember to specify the correct path/set your working directory accordingly)</li>
 </ol>
 <hr />
 <ol start="2" style="list-style-type: decimal">
-<li>Get a subset of the individuals that had more than 10 years of tenure and lost their job because the position was abolished.</li>
+<li>Get a subset of the individuals that had more than 10 years of tenure and lost their job because the position was abolished. Hint: use <code>subset()</code> from the <code>dplyr</code> package.</li>
 </ol>
 <hr />
 <ol start="3" style="list-style-type: decimal">
