correct spelling mistake

--- a/Contents/Material/Part D - GLMs/Data_exploration.html
+++ b/Contents/Material/Part D - GLMs/Data_exploration.html
@@ -370,7 +370,7 @@ summary {
 
 
 <ol style="list-style-type: decimal">
-<li>Download the benefits data from the course webpage. Note that this data is in .xlsx format. Try to load this data into R using the function <code>read_excel</code> function from the <code>readxl</code> package (rember to specify the correct path/set your working directory accordingly)</li>
+<li>Download the benefits data from the course webpage. Note that this data is in .xlsx format. Try to load this data into R using the function <code>read_excel</code> function from the <code>readxl</code> package (remember to specify the correct path/set your working directory accordingly)</li>
 </ol>
 <hr />
 <ol start="2" style="list-style-type: decimal">
