--- a/Contents/Material/Part D - GLMs/Data_exploration.html
+++ b/Contents/Material/Part D - GLMs/Data_exploration.html
@@ -374,7 +374,7 @@ summary {
 </ol>
 <hr />
 <ol start="2" style="list-style-type: decimal">
-<li>Get a subset of the individuals that had more than 10 years of tenure and lost their job because the position was abolished. Hint: use <code>subset()</code> from the <code>dplyr</code> package.</li>
+<li>Get a subset of the individuals that had more than 10 years of tenure and lost their job because the position was abolished. Hint: use <code>subset()</code> and pipes from the <code>dplyr</code> package.</li>
 </ol>
 <hr />
 <ol start="3" style="list-style-type: decimal">
